...
            const val EVENT_MONTH = "eventMonth"
            const val EVENT_DAY = "eventDay"
        }

        class Buttons {
            companion object {
                const val BACK = "back"
                const val JOIN_EVENT = "joinEvent"
                const val CHAT = "chat"
            }
        }

        class Tabs {
            companion object {
                const val ABOUT = "about"
...
